fix: scrollbar

--- a/src/define/hero/definehero.css
+++ b/src/define/hero/definehero.css
@@ -1,81 +1,82 @@
 .hero {
-	/* background-color: aquamarine; */
-	padding: 50px 100px;
-	color: var(--witty-white);
-	min-height: 75vh;
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	row-gap: 20px;
-	/* background-color: var(--blasphemous-black); */
-	/* justify-content: space-between; */
+    /* background-color: aquamarine; */
+    padding: 50px 100px;
+    color: var(--witty-white);
+    min-height: 75vh;
+    display: flex;
+    padding-top: 100px;
+    flex-direction: row;
+    align-items: center;
+    row-gap: 20px;
+    /* background-color: var(--blasphemous-black); */
+    /* justify-content: space-between; */
 }
 
 .heroSectionA {
-	display: flex;
-	flex-direction: column;
-	align-items: flex-start;
-	width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 100%;
 }
 
 .heroSectionB {
-	display: block;
-	width: 100%;
-	transform: translate(50px);
+    display: block;
+    width: 75%;
+    transform: translate(50px);
 
-	/* background-color: aquamarine; */
+    /* background-color: aquamarine; */
 }
 
 .hero .heroSectionB {
-	mix-blend-mode: lighten;
+    mix-blend-mode: lighten;
 }
 
 .heroSectionB img {
-	width: 100%;
+    width: 100%;
 }
 
 .tagline {
-	font-family: "coolvetica-rg";
-	font-weight: 100;
-	letter-spacing: 0px !important;
-	text-align: left;
+    font-family: 'coolvetica-rg';
+    font-weight: 100;
+    letter-spacing: 0px !important;
+    text-align: left;
 }
 
 .titlesponsor {
-	font-family: "coolvetica-rg";
-	font-weight: 100;
-	letter-spacing: 0px;
-	text-transform: uppercase;
-	background-color: black;
-	display: inline-block;
+    font-family: 'coolvetica-rg';
+    font-weight: 100;
+    letter-spacing: 0px;
+    text-transform: uppercase;
+    background-color: black;
+    display: inline-block;
 }
 
 .buttonContainer {
-	display: flex;
-	column-gap: 10px;
+    display: flex;
+    column-gap: 10px;
 }
 
 @media screen and (max-width: 768px) {
-	.hero {
-		/* background-color: aqua; */
-		padding: 100px 25px;
-		flex-direction: column;
-	}
+    .hero {
+        /* background-color: aqua; */
+        padding: 120px 25px;
+        flex-direction: column;
+    }
 
-	.heroSectionA {
-		order: 1;
-		display: inline-flex;
-		width: fit-content;
-		/* background-color: aquamarine; */
-	}
+    .heroSectionA {
+        order: 1;
+        display: inline-flex;
+        width: fit-content;
+        /* background-color: aquamarine; */
+    }
 
-	.heroSectionB {
-		order: 0;
-		width: 50%;
-		transform: translate(0px);
-	}
+    .heroSectionB {
+        order: 0;
+        width: 50%;
+        transform: translate(0px);
+    }
 
-	.buttonContainer {
-		flex-direction: column;
-	}
+    .buttonContainer {
+        flex-direction: column;
+    }
 }
